reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 07/07/2020
ms.locfileid: "93266216"
---
# <span data-ttu-id="456e4-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="456e4-104">SAMMANFATTNING</span><span class="sxs-lookup"><span data-stu-id="456e4-104">SYNOPSIS</span></span>

<span data-ttu-id="456e4-105">Kopierar en egenskap och ett värde från en angiven plats till en annan plats.</span><span class="sxs-lookup"><span data-stu-id="456e4-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="456e4-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="456e4-106">SYNTAX</span></span>

### <span data-ttu-id="456e4-107">Sökväg (standard)</span><span class="sxs-lookup"><span data-stu-id="456e4-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="456e4-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="456e4-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="456e4-109">BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="456e4-109">DESCRIPTION</span></span>

<span data-ttu-id="456e4-110">`Copy-ItemProperty`Cmdleten kopierar en egenskap och ett värde från en angiven plats till en annan plats.</span><span class="sxs-lookup"><span data-stu-id="456e4-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="456e4-111">Du kan till exempel använda denna cmdlet för att kopiera en eller flera register poster från en register nyckel till en annan register nyckel.</span><span class="sxs-lookup"><span data-stu-id="456e4-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="456e4-112">EXEMPEL</span><span class="sxs-lookup"><span data-stu-id="456e4-112">EXAMPLES</span></span>

### <span data-ttu-id="456e4-113">Exempel 1: kopiera en egenskap från en register nyckel till en annan register nyckel</span><span class="sxs-lookup"><span data-stu-id="456e4-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="456e4-114">Detta kommando kopierar egenskapen "egenskap" från register nyckeln "Mina program" till register nyckeln "MyApplicationRev2".</span><span class="sxs-lookup"><span data-stu-id="456e4-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="456e4-115">PARAMETRAR</span><span class="sxs-lookup"><span data-stu-id="456e4-115">PARAMETERS</span></span>

### <span data-ttu-id="456e4-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="456e4-116">-Credential</span></span>

<span data-ttu-id="456e4-117">Anger ett användar konto som har behörighet att utföra den här åtgärden.</span><span class="sxs-lookup"><span data-stu-id="456e4-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="456e4-118">Standard är den aktuella användaren.</span><span class="sxs-lookup"><span data-stu-id="456e4-118">The default is the current user.</span></span>

<span data-ttu-id="456e4-119">Ange ett användar namn, till exempel "user01" eller "Domain01\User01", eller ange ett **PSCredential** -objekt, t. ex. ett som genererades av `Get-Credential` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="456e4-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="456e4-120">Om du anger ett användar namn uppmanas du att ange ett lösen ord.</span><span class="sxs-lookup"><span data-stu-id="456e4-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="456e4-121">Den här parametern stöds inte av några providrar som installeras med Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="456e4-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-122">-Mål</span><span class="sxs-lookup"><span data-stu-id="456e4-122">-Destination</span></span>

<span data-ttu-id="456e4-123">Anger sökvägen till mål platsen.</span><span class="sxs-lookup"><span data-stu-id="456e4-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-124">-Undanta</span><span class="sxs-lookup"><span data-stu-id="456e4-124">-Exclude</span></span>

<span data-ttu-id="456e4-125">Anger, som en sträng mat ris, ett objekt eller objekt som denna cmdlet exkluderar.</span><span class="sxs-lookup"><span data-stu-id="456e4-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="456e4-126">Värdet för den här parametern kvalificerar parametern **Path** .</span><span class="sxs-lookup"><span data-stu-id="456e4-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="456e4-127">Ange ett Sök vägs element eller ett mönster, till exempel "\*. txt".</span><span class="sxs-lookup"><span data-stu-id="456e4-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="456e4-128">Jokertecken är tillåtna.</span><span class="sxs-lookup"><span data-stu-id="456e4-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="456e4-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="456e4-129">-Filter</span></span>

<span data-ttu-id="456e4-130">Anger ett filter i formatet eller språket för providern.</span><span class="sxs-lookup"><span data-stu-id="456e4-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="456e4-131">Värdet för den här parametern kvalificerar parametern **Path** .</span><span class="sxs-lookup"><span data-stu-id="456e4-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="456e4-132">Syntaxen för filtret, inklusive användning av jokertecken, är beroende av providern.</span><span class="sxs-lookup"><span data-stu-id="456e4-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="456e4-133">Filter är mer effektiva än andra parametrar, eftersom providern tillämpar dem när cmdleten hämtar objekten i stället för att ha PowerShell filtrera objekten när de har hämtats.</span><span class="sxs-lookup"><span data-stu-id="456e4-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="456e4-134">-Force</span><span class="sxs-lookup"><span data-stu-id="456e4-134">-Force</span></span>

<span data-ttu-id="456e4-135">Tvingar kommandot att köras utan att fråga användaren om bekräftelse.</span><span class="sxs-lookup"><span data-stu-id="456e4-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="456e4-136">Implementeringen varierar från providern till providern.</span><span class="sxs-lookup"><span data-stu-id="456e4-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="456e4-137">Mer information finns i [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="456e4-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-138">-Inkludera</span><span class="sxs-lookup"><span data-stu-id="456e4-138">-Include</span></span>

<span data-ttu-id="456e4-139">Anger, som en sträng mat ris, ett objekt eller objekt som denna cmdlet inkluderar i åtgärden.</span><span class="sxs-lookup"><span data-stu-id="456e4-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="456e4-140">Värdet för den här parametern kvalificerar parametern **Path** .</span><span class="sxs-lookup"><span data-stu-id="456e4-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="456e4-141">Ange ett Sök vägs element eller ett mönster, till exempel "\*. txt".</span><span class="sxs-lookup"><span data-stu-id="456e4-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="456e4-142">Jokertecken är tillåtna.</span><span class="sxs-lookup"><span data-stu-id="456e4-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="456e4-143">-LiteralPath</span></span>

<span data-ttu-id="456e4-144">Anger sökvägen till egenskapens aktuella plats.</span><span class="sxs-lookup"><span data-stu-id="456e4-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="456e4-145">Till skillnad från parametern **Path** används värdet för **LiteralPath** exakt som det har angetts.</span><span class="sxs-lookup"><span data-stu-id="456e4-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="456e4-146">Inga tecken tolkas som jokertecken.</span><span class="sxs-lookup"><span data-stu-id="456e4-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="456e4-147">Om sökvägen innehåller escape-tecken omger du den med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="456e4-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="456e4-148">Enkla citat tecken säger att PowerShell inte tolkar några tecken som escape-sekvenser.</span><span class="sxs-lookup"><span data-stu-id="456e4-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-149">-Name</span><span class="sxs-lookup"><span data-stu-id="456e4-149">-Name</span></span>

<span data-ttu-id="456e4-150">Anger namnet på den egenskap som ska kopieras.</span><span class="sxs-lookup"><span data-stu-id="456e4-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-151">– PassThru</span><span class="sxs-lookup"><span data-stu-id="456e4-151">-PassThru</span></span>

<span data-ttu-id="456e4-152">Returnerar ett objekt som representerar det objekt som du arbetar med.</span><span class="sxs-lookup"><span data-stu-id="456e4-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="456e4-153">Som standard genererar denna cmdlet inga utdata.</span><span class="sxs-lookup"><span data-stu-id="456e4-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-154">-Path</span><span class="sxs-lookup"><span data-stu-id="456e4-154">-Path</span></span>

<span data-ttu-id="456e4-155">Anger, som en sträng mat ris, sökvägen till den egenskap som ska kopieras.</span><span class="sxs-lookup"><span data-stu-id="456e4-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-156">– UseTransaction</span><span class="sxs-lookup"><span data-stu-id="456e4-156">-UseTransaction</span></span>
<span data-ttu-id="456e4-157">Inkluderar kommandot i den aktiva transaktionen.</span><span class="sxs-lookup"><span data-stu-id="456e4-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="456e4-158">Den här parametern är bara giltig medan en transaktion pågår.</span><span class="sxs-lookup"><span data-stu-id="456e4-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="456e4-159">Mer information finns i about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="456e4-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="456e4-160">-Confirm</span></span>
<span data-ttu-id="456e4-161">Uppmanar dig att bekräfta innan du kör cmdleten.</span><span class="sxs-lookup"><span data-stu-id="456e4-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="456e4-162">-WhatIf</span></span>

<span data-ttu-id="456e4-163">Visar vad som skulle hända om cmdleten kördes.</span><span class="sxs-lookup"><span data-stu-id="456e4-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="456e4-164">Cmdleten körs inte.</span><span class="sxs-lookup"><span data-stu-id="456e4-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="456e4-165">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="456e4-165">CommonParameters</span></span>

<span data-ttu-id="456e4-166">Denna cmdlet stöder de gemensamma parametrarna:,,,,,,,, `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` `-PipelineVariable` `-Verbose` `-WarningAction` , och `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="456e4-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="456e4-167">Mer information finns i [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="456e4-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="456e4-168">INDATA</span><span class="sxs-lookup"><span data-stu-id="456e4-168">INPUTS</span></span>

### <span data-ttu-id="456e4-169">System. String</span><span class="sxs-lookup"><span data-stu-id="456e4-169">System.String</span></span>

<span data-ttu-id="456e4-170">Du kan skicka vidare en sträng som innehåller en sökväg till denna cmdlet.</span><span class="sxs-lookup"><span data-stu-id="456e4-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="456e4-171">UTDATA</span><span class="sxs-lookup"><span data-stu-id="456e4-171">OUTPUTS</span></span>

### <span data-ttu-id="456e4-172">Ingen eller system. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="456e4-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="456e4-173">När du använder parametern **Passthru** genererar denna cmdlet en **PsCustomObject** som representerar egenskapen kopierat objekt.</span><span class="sxs-lookup"><span data-stu-id="456e4-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="456e4-174">Annars genererar denna cmdlet inga utdata.</span><span class="sxs-lookup"><span data-stu-id="456e4-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="456e4-175">ANTECKNINGAR</span><span class="sxs-lookup"><span data-stu-id="456e4-175">NOTES</span></span>

<span data-ttu-id="456e4-176">Denna cmdlet är utformad för att fungera med data som exponeras av vilken provider som helst.</span><span class="sxs-lookup"><span data-stu-id="456e4-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="456e4-177">Om du vill visa en lista över tillgängliga providers i din session skriver du `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="456e4-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="456e4-178">Mer information finns i about_Providers.</span><span class="sxs-lookup"><span data-stu-id="456e4-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="456e4-179">RELATERADE LÄNKAR</span><span class="sxs-lookup"><span data-stu-id="456e4-179">RELATED LINKS</span></span>

[<span data-ttu-id="456e4-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="456e4-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="456e4-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="456e4-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="456e4-184">Byt namn – ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="456e4-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="456e4-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="456e4-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="456e4-186">Get-PSProvider</span></span>](Get-PSProvider.md)
